# Phaser3-Tauri-Template

./: faviconData.json  faviconDescription.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: README.md
src/: config.ts  index.html  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/assets/data/: audio.json  fonts.json  textures.json
src/assets/lang/: en_us.json
src/assets/site/icon/: site.webmanifest
src/assets/site/style/: main.css
src/scenes/: Game.ts
src/scenes/internal/: Boot.ts  Core.ts  Head.ts  Load.ts
src/scenes/overlay/: Debug.ts
src/scripts/utility/: ColorScheme.ts  Utility.ts
src/types/: global.d.ts
