[package]
# TODO: Project Information
name = "example_project"
version = "0.0.0"
description = "Example Description"
authors = ["DanMizu"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Dan-Mizu/Phaser3-Tauri-Template"
# Leave this alone, as it references the Tauri edition, and has nothing to do with your project.
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
